updated image url for media query

--- a/css/main.css
+++ b/css/main.css
@@ -2020,7 +2020,7 @@ input::-moz-focus-inner {
 
 @media screen and (max-width: 778px) {
   section[data-image-src="images/hero-bg-3000.png"]{
-    background-image: url('/DesignFullyYours/images/hero-bg-768.png');
+    background-image: url('/images/hero-bg-768.png');
     height: 150vh;
   }
 }
