--- a/css/main.css
+++ b/css/main.css
@@ -2086,9 +2086,13 @@ input::-moz-focus-inner {
 }
 
 @media only screen and (max-width: 768px) {
-  section[data-image-src="images/hero-bg-3000.png"]{
-    background-image: url('images/hero-bg-768.png');
-    height: 150vh;
+  /*section[data-image-src="images/hero-bg-3000.png"]{*/
+  /*  background-image: url("/images/hero-bg-768.png");*/
+  /*  height: 150vh;*/
+  /*}*/
+    section{
+      background-image: url('/images/hero-bg-768.png');
+      height: 150vh;
   }
 }
 /* -------------------------------------------------------------------
