--- a/css/main.css
+++ b/css/main.css
@@ -2085,33 +2085,20 @@ input::-moz-focus-inner {
   top: .55em;
 }
 
-/*@media screen and (min-device-width: 480px) {*/
-/*  section[data-image-src="images/hero-bg-3000.png"]{*/
-/*    background-image: url('/images/hero-bg-768.png');*/
-/*    height: 150vh;*/
-/*  }*/
-/*}*/
-
-/*@media screen and (min-device-width: 768px) {*/
-/*   section[data-image-src="images/hero-bg-3000.png"]{*/
-/*      background-image: url('/images/hero-bg-768.png');*/
-/*      height: 150vh;*/
-/*  }*/
-/*}*/
-@media (min-width: 481px) and (max-width: 767px) {
-  section[data-image-src="images/hero-bg-3000.png"]{*/
-          background-image: url('/images/hero-bg-768.png');
-          height: 150vh;
-      }
-
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-device-width: 480px) {
   section[data-image-src="images/hero-bg-3000.png"]{
-  background-image: url('/images/hero-bg-768.png');
+    background-image: url('/images/hero-bg-768.png');
     height: 150vh;
   }
 }
+
+@media screen and (min-device-width: 768px) {
+   section[data-image-src="images/hero-bg-3000.png"]{
+      background-image: url('/images/hero-bg-768.png');
+      height: 150vh;
+  }
+}
+
 /* -------------------------------------------------------------------
  * ## hero social
  * ------------------------------------------------------------------- */
