--- a/css/main.css
+++ b/css/main.css
@@ -2085,19 +2085,20 @@ input::-moz-focus-inner {
   top: .55em;
 }
 
-@media (min-device-width: 480px) {
+@media screen and (min-device-width: 480px) {
   section[data-image-src="images/hero-bg-3000.png"]{
     background-image: url('/images/hero-bg-768.png');
     height: 150vh;
   }
 }
 
-@media (min-device-width: 768px) {
+@media screen and (min-device-width: 768px) {
    section[data-image-src="images/hero-bg-3000.png"]{
       background-image: url('/images/hero-bg-768.png');
       height: 150vh;
   }
 }
+
 
 /* -------------------------------------------------------------------
  * ## hero social
