--- a/css/main.css
+++ b/css/main.css
@@ -2085,13 +2085,13 @@ input::-moz-focus-inner {
   top: .55em;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   section[data-image-src="images/hero-bg-3000.png"]{
     background-image: url('/images/hero-bg-768.png');
     height: 150vh;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   section[data-image-src="images/hero-bg-3000.png"]{
     background-image: url('/images/hero-bg-768.png');
     height: 150vh;
