updated uimage path

--- a/css/main.css
+++ b/css/main.css
@@ -2094,7 +2094,7 @@ input::-moz-focus-inner {
 @media screen and (max-width: 768px) {
   section[data-image-src="images/hero-bg-3000.png"]{
     /*background-image: url('/DesignFullyYours/images/hero-bg-768.png');*/
-    background: url('/DesignFullyYours/images/hero-bg-3000.png') no-repeat center center fixed;
+    background: url('/images/hero-bg-3000.png') no-repeat center center fixed;
     height: 150vh;
   }
 }
