updated position of cover pic in media query

--- a/css/main.css
+++ b/css/main.css
@@ -2085,16 +2085,11 @@ input::-moz-focus-inner {
   top: .55em;
 }
 
-/*@media screen and (max-width: 480px) {*/
-/*  section[data-image-src="images/hero-bg-3000.png"]{*/
-/*    background-image: url('/images/hero-bg-768.png');*/
-/*    height: 150vh;*/
-/*  }*/
-/*}*/
 @media screen and (max-width: 768px) {
   section[data-image-src="images/hero-bg-3000.png"]{
     /*background-image: url('/DesignFullyYours/images/hero-bg-768.png');*/
-    background: url('/images/hero-bg-3000.png') no-repeat center center fixed;
+    background: url('/images/hero-bg-3000.png') 80% 10% fixed;
+    background-size: cover;
     height: 150vh;
   }
 }
