--- a/css/main.css
+++ b/css/main.css
@@ -2092,15 +2092,15 @@ input::-moz-focus-inner {
     background-size: cover;
   }
 }
-@media only screen and (max-width: 414px)
-and (max-height: 812px)
-and (orientation: portrait)
-and (-webkit-min-device-pixel-ratio: 2) {
-  section[data-image-src="images/hero-bg-3000.png"]{
-    background: url('/images/hero-bg-768.png') 90% 30% fixed;
-    background-size: cover;
-  }
-}
+/*@media only screen and (max-width: 414px)*/
+/*and (max-height: 812px)*/
+/*and (orientation: portrait)*/
+/*and (-webkit-min-device-pixel-ratio: 2) {*/
+/*  section[data-image-src="images/hero-bg-3000.png"]{*/
+/*    background: url('/images/hero-bg-768.png') 90% 30% fixed;*/
+/*    background-size: cover;*/
+/*  }*/
+/*}*/
 
 
 /* -------------------------------------------------------------------
