--- a/css/main.css
+++ b/css/main.css
@@ -2087,8 +2087,7 @@ input::-moz-focus-inner {
 
 @media screen and (max-width: 768px) {
   section[data-image-src="images/hero-bg-3000.png"]{
-    /*background-image: url('/DesignFullyYours/images/hero-bg-768.png');*/
-    background: url('/images/hero-bg-3000.png'); /*90% 30% fixed*/
+    background: url('/images/hero-bg-3000.png');
     background-size: cover;
   }
 }
