--- a/css/main.css
+++ b/css/main.css
@@ -2088,6 +2088,9 @@ input::-moz-focus-inner {
 @media screen and (max-width: 768px) {
   section[data-image-src="images/hero-bg-3000.png"]{
     background: url('/images/hero-bg-3000.png');
+    background-position-x: 90%;
+    background-position-y: 30%;
+    background-attachment: fixed;
     background-size: cover;
   }
 }
