--- a/css/main.css
+++ b/css/main.css
@@ -2089,16 +2089,10 @@ input::-moz-focus-inner {
   section[data-image-src="images/hero-bg-3000.png"]{
     background: url('/images/hero-bg-3000.png');
     background-position-x: 90%;
-    background-size: cover;
+    background-attachment: scroll;
   }
 }
 
-@supports (-webkit-touch-callout: none) {
-  section[data-image-src="images/hero-bg-3000.png"]{
-    background: url('/images/hero-bg-3000.png') center top no-repeat scroll;;
-    background-size: auto 100vh;
-  }
-}
 
 
 /* -------------------------------------------------------------------
