--- a/css/main.css
+++ b/css/main.css
@@ -2086,10 +2086,19 @@ input::-moz-focus-inner {
 }
 
 @media screen and (max-width: 768px) {
-  section[data-image-src="images/hero-bg-3000.png"]{
+  section[data-image-src="images/hero-bg-3000.png"]::after{
     background: url('/images/hero-bg-3000.png');
-    background-position-x: 90%;
-    background-attachment: scroll;
+    content:"";
+    position:fixed; /* stretch a fixed position to the whole screen */
+    top:0;
+    height:100vh; /* fix for mobile browser address bar appearing disappearing */
+    left:0;
+    right:0;
+    z-index:-1; /* needed to keep in the background */
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
   }
 }
 
