--- a/css/main.css
+++ b/css/main.css
@@ -2091,6 +2091,7 @@ input::-moz-focus-inner {
     content:"";
     position:fixed; /* stretch a fixed position to the whole screen */
     top:0;
+    background-position-x: 80%;
     height:100vh; /* fix for mobile browser address bar appearing disappearing */
     left:0;
     right:0;
