updated css for media query

--- a/css/main.css
+++ b/css/main.css
@@ -2095,24 +2095,24 @@ input::-moz-focus-inner {
 /*  }*/
 /*}*/
 
-@media screen and (max-width: 768px) {
-  @supports not (-webkit-touch-callout: none) {
+@supports not (-webkit-touch-callout: none) {
+  @media screen and (max-width: 768px) {
     section[data-image-src="images/hero-bg-3000.png"] {
-          background: url('/images/hero-bg-3000.png');
-          background-position-x: 90% ;
-          background-position-y: 30%;
-          background-attachment: fixed;
-          background-size: cover;
+      background: url('/images/hero-bg-3000.png');
+      background-position-x: 90%;
+      background-position-y: 30%;
+      background-attachment: fixed;
+      background-size: cover;
+    }
   }
 }
-  @media screen and (max-width: 768px) {
-    @supports (-webkit-touch-callout: none) {
+  @supports (-webkit-touch-callout: none) {
       section[data-image-src="images/hero-bg-3000.png"] {
         background: url('/images/hero-bg-3000.png');
         background-position-x: 90% ;
+        background-repeat: no-repeat;
         background-attachment: scroll;
       }
-    }
   }
 
   /* -------------------------------------------------------------------
