updated media query for iphine

--- a/css/main.css
+++ b/css/main.css
@@ -2094,6 +2094,16 @@ input::-moz-focus-inner {
 /*    background-size: cover;*/
 /*  }*/
 /*}*/
+
+@supports ( -webkit-touch-callout : none) {
+  section[data-image-src="images/hero-bg-3000.png"] {
+    background: url('/images/hero-bg-3000.png');
+    background-position-x: 90%;
+    background-position-y: 30%;
+    background-attachment: scroll;
+  }
+}
+
 @media screen and (max-width: 768px) {
     section[data-image-src="images/hero-bg-3000.png"] {
       background: url('/images/hero-bg-3000.png');
