--- a/css/main.css
+++ b/css/main.css
@@ -2098,16 +2098,15 @@ input::-moz-focus-inner {
 @media screen and (max-width: 768px) {
     section[data-image-src="images/hero-bg-3000.png"] {
       background: url('/images/hero-bg-3000.png');
-      background-position-x: 90%;
-      background-position-y: 30%;
+      background-position: right center;
       background-attachment: scroll !important;
       background-size: cover;
     }
 }
 
-  /* -------------------------------------------------------------------
-   * ## hero social
-   * ------------------------------------------------------------------- */
+/* -------------------------------------------------------------------
+* ## hero social
+* ------------------------------------------------------------------- */
 .hero-social {
   list-style: none;
   display: -ms-flexbox;
