--- a/css/main.css
+++ b/css/main.css
@@ -3549,8 +3549,8 @@ html.no-csstransitions .hero-content {
   margin-left:0%;
 }
 .header-logo img {
-    width: 100px;
-    height: auto;
+    width: 80px;
+    height: 80px !important;
 }
 
 .hero-content h1 {
